[package]
name = "bprust-build"
version = "0.1.0"
edition = "2024"

[dependencies]
quote = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0.104", default-features = false, features = ["parsing"] }
regex = "1.11.1"
case = "1.0.0"
